--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ notifications:
       - goriar.cb@gmail.com
     on_success: always # default: change
     on_failure: always # default: always
-#addons:
-#  sonarcloud:
-#    organization: "sbaltes-github"
-#    token: $SONAR_TOKEN
+addons:
+  sonarcloud:
+    organization: "goriar-github"
+    token: $SONAR_TOKEN
 
-#script:
-#  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-#  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+script:
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
